--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,7 +93,9 @@
         android:id="@+id/button8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginLeft="44dp"
+        android:layout_marginTop="76dp"
         android:onClick="siguienteFinanciamiento"
         android:text="@string/BotonSiguienteFinanciamiento"
         app:backgroundTint="#00509A"
@@ -118,11 +120,11 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="42dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginRight="5dp"
-        android:onClick="siguienteCompras"
-        android:text="@string/BotonSiguienteCompras"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:onClick="siguientePresupuestoC"
+        android:text="Presupuesto de Caja"
         app:backgroundTint="#00509A"
         app:layout_constraintEnd_toEndOf="@+id/button8"
         app:layout_constraintTop_toBottomOf="@+id/button8" />
@@ -131,7 +133,7 @@
         android:id="@+id/buttonn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="42dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="5dp"
         android:layout_marginRight="5dp"
         android:onClick="siguienteComprass"
