--- a/app/src/main/res/layout/activity_aportepatronal.xml
+++ b/app/src/main/res/layout/activity_aportepatronal.xml
@@ -130,7 +130,7 @@
         android:layout_marginEnd="68dp"
         android:layout_marginRight="68dp"
         android:layout_marginBottom="77dp"
-        android:text="0,00"
+        android:text="@string/resAporte"
         android:textColor="#000000"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/btnRegistrar"
