--- a/app/src/main/res/layout/activity_sueldos.xml
+++ b/app/src/main/res/layout/activity_sueldos.xml
@@ -330,11 +330,19 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="18dp"
+        android:layout_marginLeft="18dp"
+        android:layout_marginTop="41dp"
+        android:layout_marginEnd="408dp"
+        android:layout_marginRight="408dp"
+        android:layout_marginBottom="755dp"
         android:text="Incremento Salarial"
         android:textColor="#000000"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="18dp"
-        tools:layout_editor_absoluteY="41dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView91"
