--- a/app/src/main/res/layout/activity_menu_flujo_de_caja.xml
+++ b/app/src/main/res/layout/activity_menu_flujo_de_caja.xml
@@ -77,6 +77,18 @@
                 android:text="Reporte PDF"
                 android:textSize="18sp"
                 app:backgroundTint="#00509A" />
-    </LinearLayout>
+
+            <Button
+                android:id="@+id/btnGrafico"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30sp"
+                android:layout_marginTop="15sp"
+                android:layout_marginRight="30sp"
+                android:onClick="siguienteGrafico"
+                android:text="Generar Gráfico"
+                android:textSize="18sp"
+                app:backgroundTint="#00509A" />
+        </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
